--- a/new-css-grid-design3.html
+++ b/new-css-grid-design3.html
@@ -13,6 +13,11 @@
 
 
 	}
+
+	body{
+margin:0;
+
+	}
 		.container{
 		max-width:1040px;
 		width:100%;
@@ -23,6 +28,20 @@
 		grid-template-columns: 22px 150px  repeat(11, 1fr) 150px 22px;
 		}
 
+
+	.wrapper-menu{
+	
+	display:grid;
+	grid-row: 1 / 3;
+	grid-column:1 / -1;
+
+	}
+/*
+	.wrapper-menu--text{
+	position:absolute;
+	left:50%;
+
+	}
 
 /*
 		.outer-frame{
@@ -66,6 +85,7 @@
 		grid-row: 1 / 2;
 		grid-column: 4 /13;
 		color:white;
+		z-index:1;
 		
 
 		}
@@ -135,7 +155,7 @@ background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 
-	grid-row: 2 / 4;
+	grid-row: 1 / 4;
 	grid-column: 2 / 15;
 	
 
@@ -236,32 +256,28 @@ grid-template-rows: repeat(8, 1fr);
 		grid-template-columns: 1fr;
 		}
 
+.wrapper-menu{
+grid-template-rows: 50px;
+grid-template-columns: 2fr;	
 
+
+}
 	.header-bar--1{
-			
 		grid-row: 1 / 2;
 		grid-column: 1 / 2;
 		color:white;
-		
-
 		}
 
 
 			.header-bar--2{
-				
-				
-			
 		grid-row: none;
 		grid-column: none;
-		
-		
-
 		}
 
 	.header-bar--3{
 			
 		grid-row: 1 / 2;
-		grid-column: 1 / 2;
+		grid-column: 2 / 3;
 		color:white;
 		z-index:10;
 		}
@@ -327,14 +343,26 @@ grid-gap:30px;
 
 <div class="container">
 
-<div class="box header-bar header-bar--1 outer-frame">contact</div>
+<div class="wrapper-menu">
+	<div class="box header-bar header-bar--1 outer-frame">
+		<div class="wrapper-menu--text">
+			contact
+		</div> </div>
 
 <!-- <div class="box header-bar--1B outer-frame"></div> -->
 
 <div class="box header-bar--2 outer-frame">
 
 </div>
-<div class="box header-bar--3 outer-frame">menu</div>
+<div class="box header-bar--3 outer-frame">
+
+<div class="wrapper-menu--text">
+			menu
+		</div> </div>
+
+</div>
+
+
 
 
 <div class="box left-side-bar outer-frame"></div>
