--- a/new-css-grid-design3.html
+++ b/new-css-grid-design3.html
@@ -9,9 +9,8 @@
 	<style>
 
 	::root{
-	--light-brown :rgb(220, 223, 153) ;
-
-
+	--light-brown :rgb(220, 223, 153);
+	--light-blue-1:lightblue;
 	}
 
 	body{
@@ -29,13 +28,7 @@ margin:0;
 		}
 
 
-	.wrapper-menu{
-	
-	display:grid;
-	grid-row: 1 / 3;
-	grid-column:1 / -1;
 
-	}
 /*
 	.wrapper-menu--text{
 	position:absolute;
@@ -48,7 +41,12 @@ margin:0;
 			background:beige;
 		}
 		*/
+.wrapper-menu{
+	display:grid;
+	grid-row:1 / 3;
+	grid-column: 1 / -1;
 
+}
 		.header-bar--1{
 			
 		grid-row: 1 / 3;
@@ -93,8 +91,8 @@ margin:0;
 
 	
 		.outer-frame{
-		background: rgb(220, 223, 153);
-
+	/*	background: rgb(220, 223, 153);  */
+		background:lightblue;
 		}
 
 			.header-bar--3{
@@ -258,11 +256,12 @@ grid-template-rows: repeat(8, 1fr);
 
 .wrapper-menu{
 grid-template-rows: 50px;
-grid-template-columns: 2fr;	
+grid-template-columns: 50% 50%;	
 
 
 }
 	.header-bar--1{
+		display:grid;
 		grid-row: 1 / 2;
 		grid-column: 1 / 2;
 		color:white;
@@ -275,12 +274,13 @@ grid-template-columns: 2fr;
 		}
 
 	.header-bar--3{
-			
+		display:grid;
 		grid-row: 1 / 2;
 		grid-column: 2 / 3;
 		color:white;
 		z-index:10;
 		}
+
 
 	.left-side-bar{
 		grid-row: none;
@@ -345,7 +345,7 @@ grid-gap:30px;
 
 <div class="wrapper-menu">
 	<div class="box header-bar header-bar--1 outer-frame">
-		<div class="wrapper-menu--text">
+		<div class="wrapper-menu--text" id="menu-contact">
 			contact
 		</div> </div>
 
@@ -354,9 +354,9 @@ grid-gap:30px;
 <div class="box header-bar--2 outer-frame">
 
 </div>
-<div class="box header-bar--3 outer-frame">
+<div class="box header-bar header-bar--3 outer-frame">
 
-<div class="wrapper-menu--text">
+<div class="wrapper-menu--text" id="menu-menu">
 			menu
 		</div> </div>
 
